# DPF-Backend

./: .gitignore  manage.py  pyproject.toml
DPF_Backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
app/: forms.py  tests.py  urls.py  views.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
